# test_13

./: README.md  docker-compose.yml  pyproject.toml
app/: factories.py  filters.py  models.py  serializers.py  views.py
app/locale/pt_BR/LC_MESSAGES/: django.po
app/migrations/: 0001_initial.py
app/tests/: utils.py
app/tests/api/consumers/: test_resource.py
app/tests/api/consumers/upload_csv/: test_resource.py
core/: pagination.py  urls.py
core/settings/: _settings.py
